--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="submit">Trả lời</button>
         <button id="next" disabled>Tiếp theo</button>
         <div id="result"></div>
+        <div id="navigation" class="navigation"></div>
     </div>
     <script src="script.js"></script>
 </body>
